--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "ethers": "^5.7.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
